Quitado el botón de salir

--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
 
   <!-- Google Sign in API-->
   <script src="https://apis.google.com/js/platform.js" async defer></script>
-  <meta name="google-signin-client_id"
-    content="490154075016-33kn7mda6khg18l899gn8m0bpcnbomdg.apps.googleusercontent.com">
+  <meta name="google-signin-client_id" content="490154075016-33kn7mda6khg18l899gn8m0bpcnbomdg.apps.googleusercontent.com">
 
-
+  
 
   <style>
-    html,
-    body {
+    html, body{
       height: 100%;
     }
 
@@ -44,18 +42,18 @@
       margin: auto;
     }
 
-    h1 {
+    h1{
       margin: 15px 0px;
     }
 
-    .fields {
+    .fields{
       width: 80%;
     }
 
-    .button {
+    .button{
       margin: 10px;
       padding: 3px 0px;
-      background-color: mediumvioletred;
+      background-color:mediumvioletred;
       color: white;
       font-weight: bold;
     }
@@ -87,9 +85,8 @@
     </div>
     
   -->
-
+  
   <script src="js/init.js"></script>
   <script src="js/login.js"></script>
 </body>
-
 </html>
