Mejorado el boton de google

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <input type="text" placeholder="Nombre de usuario" required class="fields"><br>
       <input type="password" placeholder="Contraseña" required class="fields"><br>
       <input type="submit" value="Iniciar sesión" class="button fields">
-      <div class="g-signin2 fields" data-onsuccess="onSignIn"></div>
+      <div class="g-signin2" data-onsuccess="onSignIn" style="text-align: -moz-center;"></div>
     </form>
   </div>
 
