--- a/cover.html
+++ b/cover.html
@@ -13,6 +13,19 @@
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+
+  <script src="https://apis.google.com/js/platform.js"></script>
+  <script>
+    var auth2;
+    var googleUser; // The current user
+
+    gapi.load('auth2', function () {
+      auth2 = gapi.auth2.init({
+        client_id: "490154075016-33kn7mda6khg18l899gn8m0bpcnbomdg.apps.googleusercontent.com"
+      });
+    });
+  </script>
+
 </head>
 
 <body>
@@ -23,6 +36,7 @@
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+      <button onclick="onSignOut()" class="btn btn-primary">Salir</button>
     </div>
   </nav>
   <main role="main">
