--- a/product-info.html
+++ b/product-info.html
@@ -13,6 +13,18 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+
+  <script src="https://apis.google.com/js/platform.js"></script>
+  <script>
+    var auth2;
+    var googleUser; // The current user
+
+    gapi.load('auth2', function () {
+      auth2 = gapi.auth2.init({
+        client_id: "490154075016-33kn7mda6khg18l899gn8m0bpcnbomdg.apps.googleusercontent.com"
+      });
+    });
+  </script>
 </head>
 
 <body>
@@ -23,6 +35,7 @@
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+      <button onclick="onSignOut()" class="btn btn-primary">Salir</button>
     </div>
   </nav>
   <div class="container p-5">
@@ -54,6 +67,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
+  <script src="js/login.js"></script>
 </body>
 
 </html>
