Nombre del ususario visible

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div id="my-signin2" class="d-flex justify-content-center"></div>
       <script>
         function onSuccess(googleUser) {
-          onSignIn();
+          onSignIn(googleUser);
         }
         function onFailure(error) {
           console.log(error);
