Añadido y en funcionamiento el buscador de productos

--- a/products.html
+++ b/products.html
@@ -50,7 +50,7 @@
     <div class="container">
       <div class="row">
         <div class="col text-right">
-          <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
+          <div class="btn-group btn-group-toggle my-2" data-toggle="buttons">
             <label class="btn btn-light active" id="sortByRelevance">
               <input type="radio" name="options" autocomplete="off"><i
                 class="fas fa-sort-amount-down mr-1"></i>Relevancia
@@ -62,8 +62,8 @@
         </div>
       </div>
       <div class="row justify-content-end">
-        <div class="col-md-6"></div>
-        <div class="col-md-6 col-sm-12 mb-1 container">
+        <input type="search" placeholder="Buscar..." id="searchProductBar" class="col-md-6 my-2">
+        <div class="col-md-6 col-sm-12 my-2 container">
           <div class="row container p-0 m-0">
             <div class="col">
               <p class="font-weight-normal text-right my-2">Precio</p>
@@ -83,6 +83,10 @@
           </div>
         </div>
       </div>
+
+      <div class="row justify-content-front">
+      </div>
+
       <div class="row">
         <div class="list-group" id="cat-list-container">
         </div>
