--- a/products.html
+++ b/products.html
@@ -30,22 +30,22 @@
 <body>
   <nav class="site-header sticky-top py-1 bg-dark">
     <div class="container d-flex flex-column flex-md-row justify-content-between">
-      <a class="py-2 d-none d-md-inline-block" href="cover.html">Inicio</a>
-      <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
-      <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
-      <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      <div class="d-none d-md-inline-block bg-light rounded-pill border border-primary">
+      <a class="py-2 d-none d-md-inline-block mt-1" href="cover.html">Inicio</a>
+      <a class="py-2 d-none d-md-inline-block mt-1" href="categories.html">Categorías</a>
+      <a class="py-2 d-none d-md-inline-block mt-1" href="products.html">Productos</a>
+      <a class="py-2 d-none d-md-inline-block mt-1" href="sell.html">Vender</a>
+      <a class="py-2 d-none d-md-inline-block mt-1" href="cart.html">Mi carrito</a>
+      <div id="loggedInDiv" class="d-none d-md-inline-block bg-light rounded-pill border border-primary my-2">
         <span id="loggedInUser" class="pl-3 pr-1 font-weight-bold align-middle"></span>
-        <button onclick="onSignOut()" class="btn btn-primary rounded-pill">Salir</button>
+        <button onclick="onSignOut()" class="btn btn-primary py-0 rounded-pill">Salir</button>
       </div>
     </div>
   </nav>
 
   <main role="main" class="pb-5">
-    <div class="text-center p-4">
+    <div class="text-center p-3">
       <h2>Productos</h2>
-      <p class="lead">Verás aquí todos los productos.</p>
+      <p class="lead">Verás aquí todos los productos de la categoría <span class="font-weight-bold">Autos</span>.</p>
     </div>
     <div class="container">
       <div class="row">
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="row justify-content-end">
-        <input type="search" placeholder="Buscar..." id="searchProductBar" class="col-md-6 my-2">
+        <input type="search" placeholder="Buscar..." id="searchProductBar" class="form-control col-md-6 my-2">
         <div class="col-md-6 col-sm-12 my-2 container">
           <div class="row container p-0 m-0">
             <div class="col">
@@ -128,7 +128,6 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/products.js"></script>
-  <script src="js/login.js"></script>
 </body>
 
 </html>
