Estilo de categorias similar a los productos

--- a/categories.html
+++ b/categories.html
@@ -50,7 +50,7 @@
     <div class="container">
       <div class="row">
         <div class="col text-right">
-          <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
+          <div class="btn-group btn-group-toggle my-2" data-toggle="buttons">
             <label class="btn btn-light active" id="sortAsc">
               <input type="radio" name="options" autocomplete="off" checked>A-Z
             </label>
@@ -65,7 +65,7 @@
       </div>
       <div class="row justify-content-end">
         <div class="col-md-6"></div>
-        <div class="col-md-6 col-sm-12 mb-1 container">
+        <div class="col-md-6 col-sm-12 my-2 container">
           <div class="row container p-0 m-0">
             <div class="col">
               <p class="font-weight-normal text-right my-2">Cant.</p>
