--- a/products.html
+++ b/products.html
@@ -53,16 +53,16 @@
           <div class="btn-group btn-group-toggle my-2" data-toggle="buttons">
             <label class="btn btn-light active" id="sortByRelevance">
               <input type="radio" name="options" autocomplete="off"><i
-                class="fas fa-sort-amount-down mr-1"></i>Relevancia
+                class="fas fa-sort-amount-up mr-1"></i>Relevancia
             </label>
             <label class="btn btn-light" id="sortByPrice">
-              <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-up mr-1"></i>Precio
+              <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Precio
             </label>
           </div>
         </div>
       </div>
-      <div class="row justify-content-end">
-        <input type="search" placeholder="Buscar..." id="searchProductBar" class="form-control col-md-6 my-2">
+      <div class="row justify-content-center">
+        <input type="search" placeholder="Buscar..." id="searchProductBar" class="form-control col-10 col-md-6 my-2">
         <div class="col-md-6 col-sm-12 my-2 container">
           <div class="row container p-0 m-0">
             <div class="col">
@@ -93,20 +93,7 @@
       </div>
     </div>
   </main>
-
-  <!--
-      
-      <div class="container p-5">
-        <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-          <h4 class="alert-heading">¡A trabajar! :)</h4>
-          <p>Esta sección corresponde a: Entrega 1 (Fecha de entrega: 16/08/2020) y Entrega 2 (Fecha de entrega: 30/08/2020).</p>
-          <hr>
-          <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
-        </div>
-      </div>
-      
-    -->
-
+  
   <footer class="text-muted bg-light">
     <div class="container">
       <p class="float-right">
