Agregado un nuevo tipo de filtrado por precio en los productos

--- a/products.html
+++ b/products.html
@@ -55,8 +55,11 @@
               <input type="radio" name="options" autocomplete="off"><i
                 class="fas fa-sort-amount-up mr-1"></i>Relevancia
             </label>
-            <label class="btn btn-light" id="sortByPrice">
-              <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Precio
+            <label class="btn btn-light" id="sortByPriceDesc">
+              <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Precio Desc.
+            </label>
+            <label class="btn btn-light" id="sortByPriceAsc">
+              <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-up mr-1"></i>Precio Asc.
             </label>
           </div>
         </div>
